Added create Quote API
